@@ -42,7 +42,7 @@
 
 <!--ドロップダウンメニュー=====================================-->
 <div class="dropdown-menu sp js-alt-hover">
-<@s.spmenu>
+<@s.spmenu || '<ul></ul>'>
 </div>
 
 <$end>
