@@ -14,6 +14,7 @@
 -adiary.js中のIE67フラグを除去しました。
 -スマホメニューを設定し忘れる人が多いので、設定するよう警告を出すようにしました。
 -スマホメニューの設定の有無に関わらず、スマホ表示でメニュー領域を出力するようにしました。((テーマの開発（スマホ用）が煩雑になるのを防ぐためです。))
+-IEのスタイルシート（CSS）によるXSSが、IE8やIE9の標準準拠モードでは発生しないのでCSSのXSS(expression)対策コードを削除しました。（[http://adiary.blog.abk.nu/0385:#c3:Thanks to t-hide]）
 -【fix】太字や文字色などの記法ヘルパーが、記法の入れ子をうまく処理できない。
 -【fix】ブログの説明に「?」を入力すると「{<br>}」に変換される。
 -【fix】ユーザーcssのsyntaxハイライトサンプルが間違っていた。（[http://www.ujiya.net/0268:#k268p2:Thanks to ぉゅぅ]）
